--- a/package.xml
+++ b/package.xml
@@ -6,7 +6,7 @@
   <description>vendor package for the sol2 library</description>
   <maintainer email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</maintainer>
   <license>Apache License 2.0</license> <!-- the contents of this package are Apache 2.0 -->
-  <license>MIT</license>  <!-- sol is MIT -->
+  <license>MIT</license>  <!-- sol2 is MIT -->
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
